# sockets

./: CMakeLists.txt  README.md  deserializer.cpp  deserializer.h  parser.cpp  parser.h  read_write.cpp  read_write.h  serializer.cpp  serializer.h
client/: client.cpp  client.h  main.cpp
examples/: reply.txt  request.txt
server/: main.cpp  server.cpp  server.h
